0.1px is perfectly valid... stops the 1px-worth of scrollbar "jump" in Gecko browsers :D
git-svn-id: file:///svn/phpbb/trunk@7298 89ea8834-ac86-4346-8a33-228a782c2dd0

--- a/phpBB/adm/style/admin.css
+++ b/phpBB/adm/style/admin.css
@@ -30,7 +30,7 @@ html {
 	background: #DBD7D1;
 	/* Always show a scrollbar for short pages - stops the jump when the scrollbar appears. non-ie browsers */
 	height: 100%;
-	margin-bottom: 1px;
+	margin-bottom: 0.1px;
 }
 
 body {
